# IPL-Cricket-Bot-Agentic-Analyst

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  ask.py  pyproject.toml  server.py
.streamlit/: config.toml
core/: config.py  db.py
data/: player_attributes.csv
docs/superpowers/plans/: 2026-06-19-react-frontend-migration.md
docs/superpowers/specs/: 2026-06-19-react-frontend-migration-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: Background.tsx  FilterDeck.tsx  Footer.tsx  Hero.tsx  KpiTicker.tsx  Nav.tsx  PlayerModal.tsx  Topbar.tsx
frontend/src/components/charts/: AgentChart.tsx  Card.tsx  Donut.tsx  Duel.tsx  HBars.tsx  Scatter.tsx  VBars.tsx
frontend/src/components/hooks/: useReveal.ts
frontend/src/components/views/: AskView.tsx  BattingView.tsx  BowlingView.tsx  InsightsView.tsx  MatchupsView.tsx  OverviewView.tsx  TeamsView.tsx
frontend/src/hooks/: useAnalystStream.ts  useDashboard.ts  useInsights.ts
frontend/src/state/: FiltersContext.tsx
ingest/: flatten.py  load.py  schema.sql  views.sql
scripts/: build_player_attributes.py
tests/: test_agent.py  test_config.py  test_db.py  test_server.py  test_views.py
web/: app.js  index.html  styles.css
