[project]
name = "cricket-bot"
version = "0.1.0"
description = "Natural-language + dashboard analytics over IPL ball-by-ball data — an LLM analyst that writes its own SQL over rule-encoding DuckDB views."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "uvicorn>=0.34.0",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "tabulate>=0.10.0",
    "python-dotenv>=1.2.2",
    "plotly>=6.7.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
